k8ss/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: techmefi-web
  namespace: tmefi
spec:
  selector:
    app: techmefi-web
  ports:
    - protocol: TCP
      port: 8086
      targetPort: 80
