k8ss/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techmefi-web-ingress
  namespace: tmefi
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: desentjob.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: techmefi-web
                port:
                  number: 8086
